# arpra

./: .autotools  .cproject  .gitignore  .project  AUTHORS  Makefile.am  Makefile.am.old  README  README.md  add.c  affine_1.c  affine_2.c  affine_term_1.c  affine_term_2.c  clear.c  configure.ac  div.c  exp.c  get_default_prec.c  get_prec.c  init.c  init2.c  init_nterms.c  init_set.c  init_set_d.c  inv.c  mpfa.h  mul.c  neg.c  next_sym.c  set.c  set_d.c  set_default_prec.c  set_mpfr.c  set_prec.c  sub.c  term.c  term_linear_1.c  term_linear_2.c  test.c
doc/: Makefile.am  arpra.texi  mpfa.texi
experiments/: experiment1.c  experiment1.py  experiment1.sh  experiment2.c  experiment2.sh  experiment_1.c  experiment_1.py  experiment_1.sh  experiment_2.c  experiment_2.py  experiment_2.sh
experiments/experiment_3/: morris_lecar.c  morris_lecar_intlab.m
experiments/fig5/: fig5.py  fig5.sh  ml-arpra.c  ml-mpfi.c  ml-mpfr.c
extra/: henon_map.c  henon_map_mpfi.c  hodgkin_huxley.c  morris_lecar.c  morris_lecar_mpfi.c  morris_lecar_mpfr.c
include/: arpra.h  arpra2mpfi.h  arpra_ode.h  arpra_to_mpfi.h  mpfa.h  mpfa2mpfi.h
m4/: .gitkeep
src/: Makefile.am  Makefile.am.old  add.c  affine_1.c  affine_2.c  arpra-impl.h  clear.c  clears.c  condense_last_n.c  condense_small.c  default_prec.c  default_precision.c  div.c  error.c  exp.c  expand.c  ext_mpfr.c  get_bounds.c  get_default_prec.c  get_mpfi.c  get_prec.c  helper_affine_1.c  helper_affine_2.c  helper_alloc_terms.c  helper_buffer.c  helper_check_result.c  helper_clear_terms.c  helper_compute_range.c  helper_error.c  helper_free_terms.c  helper_mix_trim.c  helper_mpfr.c  helper_mpfr_rnd_err.c  helper_mpfr_rnderr.c  helper_mpfr_sum.c  helper_mpfr_sumabs.c  helper_radius.c  helper_range.c  helper_resize_term_memory.c  helper_rnd_err.c  (+58 more)
tests/: Makefile.am  Makefile.am.old  arpra-test.h  bivariate.c  bivariate_mpfi.c  cmp_mpfa.c  cmp_mpfi.c  compare_arpra.c  compare_bounds.c  compare_mpfa.c  compare_mpfi.c  fixture.c  logfile.c  logfile_mpfi.c  logfile_mpfr.c  logfile_printf.c  logfile_text.c  morris_lecar.c  mpfa-test.c  mpfa-test.h  rand.c  rand_arpra.c  rand_mpfa.c  rand_mpfi.c  rand_mpfr.c  rand_ui.c  share_syms.c  t_add.c  t_div.c  t_exp.c  t_inv.c  t_log.c  t_mul.c  t_neg.c  t_sqrt.c  t_sub.c  test.c  test1.c  test_mpfa.c  test_mpfi.c  (+3 more)
tools/: arpra_affine_approx.m  arpra_affine_joint_range.m  arpra_joint_range.py  arpra_mpfi_2d.py  arpra_mpfr_2d.py  arpra_tools.py  mpfa_affine_approx.m  mpfa_joint_range.m
